<resources>
    <string name="app_name">STEP Education</string>
    <string name="enterName">Enter your name:</string>
    <string name="errorString">Error, we have digits in our name!</string>
    <string name="successString">Everithing looks fine!</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_mark">Average mark</string>
    <string name="prompt_group">Group</string>
    <string name="prompt_add_student">Add student</string>
    <string name="prompt_add_note">Add note</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_deadline">Deadline</string>
    <string name="prompt_add">Add</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Successfull registration!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_firstname">Not a valid firstname</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_phone_number">Enter phone number: </string>
    <string name="camera">Camera</string>
    <string name="call">Call</string>
    <string name="capture">Capture</string>
    <string name="activity_main_name_hint">Введите имя</string>
    <string name="activity_main_surname_hint">Введите фамилию</string>
    <string name="activity_main_button_transition">Отправить данные</string>
    <string name="button_get">GET</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="search_hint">Use for search by name...</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_mark">Mark</string>
    <string name="sort_by_random">Random</string>
    <string name="sort_by_text">Sort by</string>
</resources>