<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edittext_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_phone_number"
        android:layout_gravity="center_horizontal"
        android:inputType="phone"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:onClick="callOnNumber"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:onClick="openCamera"
        android:layout_marginTop="50sp"
        android:layout_gravity="center_horizontal"
        />

    <ImageView
        android:id="@+id/imageview_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30sp" />

</LinearLayout>