<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30sp"
    tools:context=".InputCardActivity">

    <ImageView
        android:id="@+id/imageview_input_card_selfie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edittext_input_card_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/activity_main_name_hint"
        app:layout_constraintLeft_toRightOf="@+id/imageview_input_card_selfie"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edittext_input_card_surname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/activity_main_surname_hint"
        app:layout_constraintLeft_toRightOf="@+id/imageview_input_card_selfie"
        app:layout_constraintTop_toBottomOf="@+id/edittext_input_card_name"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_input_card_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintLeft_toRightOf="@id/imageview_input_card_selfie"
        app:layout_constraintTop_toBottomOf="@id/edittext_input_card_surname"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>